--- a/src/docs/asciidoc/road-to-immutability/090-other-annotations.adoc
+++ b/src/docs/asciidoc/road-to-immutability/090-other-annotations.adoc
@@ -77,7 +77,7 @@ class Builder {
     @NotModified
     @Identity
     private static <T> T requireNonNull(@NotNull T t) {
-        if(t == null) throw new UnsupportedOperationException();
+        if(t == null) throw new IllegalArgumentException();
         return t;
     }
 
@@ -282,9 +282,8 @@ class Finisher {
 <3> symbolises the modifications that act as finishing
 <4> the result of finishing: an eventually immutable object in its end-state.
 
-=== Utility class, extensions, singleton
 
-==== Utility classes
+=== Utility classes
 
 We use the simple and common definition:
 
@@ -298,7 +297,7 @@ These definitions imply
 . it has a single, private, unused constructor,
 . and its static fields (if it has any) are sufficiently immutable.
 
-==== Extension classes
+=== Extension classes
 
 In Java, many classes cannot easily be extended.
 Implementations of extensions typically use a utility class with the convention that the first parameter of the static method is the object of the extended method call:
@@ -337,7 +336,7 @@ Level 2 immutable classes can also play the role of extension facilitators, with
 Note that extension classes will often not be {container}, since the first parameter will be {modified} in many cases.
 
 [#singleton-classes]
-==== Singleton classes
+=== Singleton classes
 
 A singleton class is a class which has a mechanism to limit the creation of instances to a maximum of one.
 The term 'singleton' then refers to this unique instance.
@@ -379,7 +378,7 @@ public class SingletonWithPrecondition {
     private static boolean created;
 
     public SingletonWithPrecondition(int k) {
-        if (created) throw new UnsupportedOperationException();
+        if (created) throw new IllegalStateException();
         created = true;
         this.k = k;
     }
